lib/bait/tests/inout_error/array/type_init.in.bt
a := []string { length = false cap = 'also'}
